syntax = "proto3";

message NodeDto {
  string Id = 1;
  repeated LabelDto labels = 2;
}

message LabelDto {
  string key = 1;
  ValueDto value = 2;
}

message ValueDto {
  enum ValueTypeDto {
    Bool = 0;
    Float64 = 1;
    String = 2;
  };
  ValueTypeDto type = 1;
  bytes marshalled = 2;
}

message BoolValueDto {
  bool value = 1;
}

message Float64ValueDto {
  double value = 1;
}

message StringValueDto {
  string value = 1;
}